<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/top_maintenance_toolbar"
            android:layout_width="match_parent"
            android:id="@+id/layout1"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:background="@color/dividerColor" />

        <RelativeLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/img_helpdesk_back"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_20dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_icon"
                app:tint="@color/colorHeadingOne" />


            <LinearLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/img_helpdesk_back"
                android:layout_toStartOf="@+id/layout_strip"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_ticket_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_5dp"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/colorDashboardApps"
                        android:textSize="@dimen/dimen_14dp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                </HorizontalScrollView>


                <TextView
                    android:id="@+id/txt_ticket_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/colorHeadingOne"
                    android:textSize="@dimen/dimen_16sp"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_strip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/filter_image"
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_20dp"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:src="@drawable/schedules"
                    app:tint="@color/colorHeadingOne" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/toolbar_category"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/layout_asset_footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_margin="@dimen/dimen_10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ticket Task Information"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_tasklist"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:layout_gravity="right|center"
            android:gravity="right|center">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:backgroundTint="@color/colorCancelButtonbg"/>

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:text="@string/Continue"
                android:padding="@dimen/dimen_10dp"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
