<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ivis.qcauditapp.fragment.RaiseRequestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/top_maintenance_toolbar"
            android:layout_width="match_parent"
            android:id="@+id/layout1"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:background="@color/dividerColor" />

        <RelativeLayout
            android:id="@+id/toolbar_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/img_raiseIndentSpare_back"
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_20dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/back_icon"
                    app:tint="@color/colorHeadingOne" />


                <LinearLayout
                    android:id="@+id/layout_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_raiseIndentSpare_back"
                    android:layout_toStartOf="@+id/layout_strip"
                    android:orientation="vertical">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_5dp">

                        <TextView
                            android:id="@+id/txt_ticket_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dimen_5dp"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="@color/colorDashboardApps"
                            android:textSize="@dimen/dimen_14dp"
                            android:textStyle="bold"
                            tools:ignore="RelativeOverlap" />

                    </HorizontalScrollView>


                    <TextView
                        android:id="@+id/txt_ticket_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_5dp"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/colorHeadingOne"
                        android:textSize="@dimen/dimen_16sp"
                        tools:ignore="RelativeOverlap" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_strip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/filter_image"
                        android:layout_width="@dimen/dimen_30dp"
                        android:layout_height="@dimen/dimen_20dp"
                        android:layout_marginEnd="@dimen/dimen_10dp"
                        android:src="@drawable/schedules"
                        app:tint="@color/colorHeadingOne" />
                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/toolbar_category"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_10dp"
            android:weightSum="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/general_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view2"
                    android:background="@drawable/expandable_lists_boarder"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_10dp">

                    <TextView
                        android:id="@+id/listTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                        android:drawableTint="@color/colorPrimary"
                        android:gravity="center_vertical"
                        android:text="@string/indent_request_info"
                        android:textColor="@color/colorPrimary" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerLayout"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_above="@+id/maintenancetxt_ll"
                    android:orientation="horizontal">

                    <!-- RelativeLayout replacing TextInputLayout -->
                    <RelativeLayout
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/autocompleteborder">

                        <AutoCompleteTextView
                            android:id="@+id/indent_request_autocomplete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@id/clearIndentRequest"
                            android:hint="Search Here"
                            android:padding="8dp"
                            android:drawableRight="@drawable/ic_dropdown"
                            android:background="@null"
                            android:dropDownHeight="wrap_content"
                            android:singleLine="true"
                            android:inputType="text" />

                        <ImageButton
                            android:id="@+id/clearIndentRequest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:visibility="gone"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/clear_image"
                            android:contentDescription="Clear text" />

                    </RelativeLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ADD"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white"
                        android:id="@+id/indentReqAddButton"
                        android:backgroundTint="@color/backgroundColor"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_main_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:background="@color/LightGray"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkbox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:layout_margin="@dimen/dimen_5dp"/>

                        <TextView
                            android:id="@+id/txt_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:text="Name"/>

                        <TextView
                            android:id="@+id/txt_qty"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:text="QTY"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:id="@+id/txt_spars_s_no"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:text="Serial no"/>

                        <ImageView
                            android:id="@+id/btn_edit"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/dimen_20dp"
                            android:layout_weight="0.1"
                            android:text="Edit"
                            android:visibility="invisible"
                            android:src="@drawable/edit"/>

                        <ImageView
                            android:id="@+id/btn_delete"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/dimen_20dp"
                            android:layout_weight="0.1"
                            android:text="Delete"
                            android:visibility="invisible"
                            android:src="@drawable/delete"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/Indent_recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal"
                android:layout_gravity="right|center|bottom"
                android:gravity="right|center|bottom">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:padding="@dimen/dimen_10dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/colorCancelButtonbg"/>

                <Button
                    android:id="@+id/continue_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:text="@string/Continue"
                    android:padding="@dimen/dimen_10dp"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
